# WindVox

./: .gitignore  CHANGELOG.md  README.md  config.yaml.example  install.sh  pyproject.toml  uninstall.sh
docs/: volcengine-credentials.md
src/windvox/: __init__.py  asr.py  audio.py  config.py  hotkey.py  input.py  main.py  overlay.py  session.py  tray.py
